python/tests/gold/tlscontextstest/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "tlscontextstest.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ],
        "tlscontextstest.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "k8s-tlscontextstest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tlscontextstest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest",
                "service": "tlscontextstest-admin"
            },
            "name": "tlscontextstest-admin",
            "namespace": "default",
            "rkey": "k8s-tlscontextstest-admin-default",
            "serialization": "ambassador_id: tlscontextstest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tlscontextstest\n  scope: AmbassadorTest\n  service: tlscontextstest-admin\nname: tlscontextstest-admin\nnamespace: default\n"
        },
        "k8s-tlscontextstest-default": {
            "_referenced_by": {},
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tlscontextstest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tlscontextstest",
            "namespace": "default",
            "rkey": "k8s-tlscontextstest-default",
            "serialization": "ambassador_id: tlscontextstest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: tlscontextstest\n  scope: AmbassadorTest\nname: tlscontextstest\nnamespace: default\n"
        },
        "k8s-tlscontextstest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tlscontextstest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tlscontextstest-http",
            "namespace": "default",
            "rkey": "k8s-tlscontextstest-http-default",
            "serialization": "ambassador_id: tlscontextstest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tlscontextstest\n  scope: AmbassadorTest\nname: tlscontextstest-http\nnamespace: default\n"
        },
        "test-tlscontexts-secret.default.1": {
            "_referenced_by": {},
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "kind": "Secret",
            "location": "test-tlscontexts-secret.default.1",
            "metadata_labels": {
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "test-tlscontexts-secret",
            "namespace": "default",
            "rkey": "test-tlscontexts-secret.default.1",
            "secret_type": "Opaque",
            "serialization": "ambassador_id: tlscontextstest\napiVersion: getambassador.io/v2\nkind: Secret\nmetadata_labels:\n  kat-ambassador-id: tlscontextstest\n  scope: AmbassadorTest\nname: test-tlscontexts-secret\nnamespace: default\nsecret_type: Opaque\ntls_crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1RENDQXFDZ0F3SUJBZ0lKQUowWDU3ZXlwQk5UTUEwR0NTcUdTSWIzRFFFQkN3VUFNSEV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQ [...]
            "tls_crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1RENDQXFDZ0F3SUJBZ0lKQUowWDU3ZXlwQk5UTUEwR0NTcUdTSWIzRFFFQkN3VUFNSEV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQklHQTFVRUN3d0xSVzVuYVc1bFpYSnBibWN4R3pBWkJnTlZCQU1NRW0xaGMzUmxjaTVrCllYUmhkMmx5WlM1cGJ6QWVGdzB4T1RBeE1UQXhPVEF6TXpCYUZ3MHlOREF4TURreE9UQXpNekJhTUhFeEN6QUoKQmdOVkJBWVRBbFZUTVFzd0NRWURWUVFJREFKTlFURVBNQTBHQTFVRUJ3d0dRbTl6ZEc5dU1SRXdEd1lEVlFRSwpEQWhF [...]
        },
        "tlscontextstest.default.1": {
            "_referenced_by": {},
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v0",
            "config": {
                "upstream": {
                    "enabled": true,
                    "secret": "test-tlscontexts-secret"
                }
            },
            "kind": "Module",
            "location": "tlscontextstest.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tls",
            "namespace": "default",
            "rkey": "tlscontextstest.default.1",
            "serialization": "ambassador_id: tlscontextstest\napiVersion: ambassador/v0\nconfig:\n  upstream:\n    enabled: true\n    secret: test-tlscontexts-secret\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: tlscontextstest\n  scope: AmbassadorTest\nname: tls\n"
        },
        "tlscontextstest.default.2": {
            "_referenced_by": {},
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "tlscontextstest.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tlscontextstest-http",
            "namespace": "default",
            "prefix": "/TLSContextsTest/",
            "rkey": "tlscontextstest.default.2",
            "serialization": "ambassador_id: tlscontextstest\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: tlscontextstest\n  scope: AmbassadorTest\nname: tlscontextstest-http\nprefix: /TLSContextsTest/\nservice: tlscontextstest-http\n",
            "service": "tlscontextstest-http"
        }
    },
    "mappings": {
        "tlscontextstest-http": {
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tlscontextstest-http",
            "namespace": "default",
            "prefix": "/TLSContextsTest/",
            "service": "tlscontextstest-http"
        }
    },
    "modules": {
        "tls": {
            "apiVersion": "getambassador.io/v0",
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tls",
            "namespace": "default",
            "upstream": {
                "enabled": true,
                "secret": "test-tlscontexts-secret"
            }
        }
    },
    "secrets": {
        "test-tlscontexts-secret.default.1": {
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "kind": "Secret",
            "metadata_labels": {
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "test-tlscontexts-secret",
            "namespace": "default",
            "secret_type": "Opaque",
            "tls_crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1RENDQXFDZ0F3SUJBZ0lKQUowWDU3ZXlwQk5UTUEwR0NTcUdTSWIzRFFFQkN3VUFNSEV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQklHQTFVRUN3d0xSVzVuYVc1bFpYSnBibWN4R3pBWkJnTlZCQU1NRW0xaGMzUmxjaTVrCllYUmhkMmx5WlM1cGJ6QWVGdzB4T1RBeE1UQXhPVEF6TXpCYUZ3MHlOREF4TURreE9UQXpNekJhTUhFeEN6QUoKQmdOVkJBWVRBbFZUTVFzd0NRWURWUVFJREFKTlFURVBNQTBHQTFVRUJ3d0dRbTl6ZEc5dU1SRXdEd1lEVlFRSwpEQWhF [...]
        }
    },
    "service": {
        "k8s-tlscontextstest-admin-default": {
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest",
                "service": "tlscontextstest-admin"
            },
            "name": "tlscontextstest-admin",
            "namespace": "default"
        },
        "k8s-tlscontextstest-default": {
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tlscontextstest",
            "namespace": "default"
        },
        "k8s-tlscontextstest-http-default": {
            "ambassador_id": "tlscontextstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tlscontextstest",
                "scope": "AmbassadorTest"
            },
            "name": "tlscontextstest-http",
            "namespace": "default"
        }
    }
}
